src/evaluator/infix/tests/snapshots/rust_monkey_interpreter__evaluator__infix__tests__test_evaluator_infix_integer_expressions_case4.snap
---
source: src/evaluator/infix/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string())))"
---
{
  "INTEGER": {
    "value": 0
  }
}
